<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/mobile_navigation"
	app:startDestination="@+id/nav_home">

	<fragment
		android:id="@+id/nav_home"
		android:name="com.example.ecostore.ui.home.HomeFragment"
		android:label="@string/menu_home"
		tools:layout="@layout/fragment_home" />

	<fragment
		android:id="@+id/nav_menu"
		android:name="com.example.ecostore.ui.menu.MenuFragment"
		android:label="@string/menu_category"
		tools:layout="@layout/fragment_menu_categories" />

	<fragment
		android:id="@+id/nav_product_details"
		android:name="com.example.ecostore.ui.productdetail.ProductDetailFragment"
		android:label="@string/menu_product_details"
		tools:layout="@layout/fragment_product_detail" />

	<fragment
		android:id="@+id/nav_tools"
		android:name="com.example.ecostore.ui.tools.ToolsFragment"
		android:label="@string/menu_tools"
		tools:layout="@layout/fragment_tools" />

	<fragment
		android:id="@+id/nav_product_list"
		android:name="com.example.ecostore.ui.productlist.ProductListFragment"
		android:label="@string/products"
		tools:layout="@layout/fragment_product_list" />
</navigation>